test_scripts/errors/missing_return_semicolon.stderr
Parse Error:
 1 | fn test() {
 2 |     return 5
         ^^^^^^^^
 3 | }
Error: Expected semicolon after `return <expr>`, found RCurly
Failed to parse script
